--- a/Simple todo app/templates/base.html
+++ b/Simple todo app/templates/base.html
@@ -39,7 +39,7 @@
           </li>
           <li class="nav-item">
               <a class="nav-link" href="#">
-                  <img src="https://img.icons8.com/external-dreamstale-lineal-dreamstale/24/external-tasks-organization-dreamstale-lineal-dreamstale.png" width="24" height="24">
+                  <img src="https://img.icons8.com/ios/50/calendar--v1.png" alt="calendar--v1" width="24" height="24">
                   <span>Today's Tasks</span>
               </a>
           </li>
