--- a/Simple todo app/templates/base.html
+++ b/Simple todo app/templates/base.html
@@ -11,6 +11,7 @@
 </head>
 <body>
     <h1>Task Master</h1>
+    <link rel="shortcut icon" href="{{url_for('static', filename='img/favicon')}}">
     <div class="sidebar">
       <ul class="nav flex-column">
           <li class="nav-item">
@@ -48,6 +49,7 @@
         </li>
       </ul>
     </div>
+
     {% block body %} {% endblock %}
 
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" 
